Update StreamsTest.java